; ModuleID = '/home/carl/AnghaBench/kphp-kdb/storage/extr_storage-engine.c_http_x_accel_redirect.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/storage/extr_storage-engine.c_http_x_accel_redirect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.connection = type { i32 }

@http_x_accel_redirect.location = internal global [256 x i8] c"X-Accel-Redirect: \00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00", align 16
@.str = private unnamed_addr constant [16 x i8] c"%s:%llx:%s:%x\0D\0A\00", align 1
@.str.1 = private unnamed_addr constant [26 x i8] c"location buffer overflow\0A\00", align 1
@ContentTypes = common dso_local global i32* null, align 8
@x_accel_redirects = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.connection*, i8*, i64, i8*, i32)* @http_x_accel_redirect to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @http_x_accel_redirect(%struct.connection* %0, i8* %1, i64 %2, i8* %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.connection*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store %struct.connection* %0, %struct.connection** %7, align 8
  store i8* %1, i8** %8, align 8
  store i64 %2, i64* %9, align 8
  store i8* %3, i8** %10, align 8
  store i32 %4, i32* %11, align 4
  %13 = load i8*, i8** %8, align 8
  %14 = load i64, i64* %9, align 8
  %15 = load i8*, i8** %10, align 8
  %16 = load i32, i32* %11, align 4
  %17 = call i32 @snprintf(i8* getelementptr inbounds ([256 x i8], [256 x i8]* @http_x_accel_redirect.location, i64 0, i64 18), i32 238, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i8* %13, i64 %14, i8* %15, i32 %16)
  store i32 %17, i32* %12, align 4
  %18 = load i32, i32* %12, align 4
  %19 = icmp sge i32 %18, 238
  br i1 %19, label %20, label %22

20:                                               ; preds = %5
  %21 = call i32 @vkprintf(i32 1, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.1, i64 0, i64 0))
  store i32 -500, i32* %6, align 4
  br label %32

22:                                               ; preds = %5
  %23 = load %struct.connection*, %struct.connection** %7, align 8
  %24 = load i32*, i32** @ContentTypes, align 8
  %25 = load i32, i32* %11, align 4
  %26 = sext i32 %25 to i64
  %27 = getelementptr inbounds i32, i32* %24, i64 %26
  %28 = load i32, i32* %27, align 4
  %29 = call i32 @write_basic_http_header(%struct.connection* %23, i32 307, i32 0, i32 -1, i8* getelementptr inbounds ([256 x i8], [256 x i8]* @http_x_accel_redirect.location, i64 0, i64 0), i32 %28)
  %30 = load i32, i32* @x_accel_redirects, align 4
  %31 = add nsw i32 %30, 1
  store i32 %31, i32* @x_accel_redirects, align 4
  store i32 0, i32* %6, align 4
  br label %32

32:                                               ; preds = %22, %20
  %33 = load i32, i32* %6, align 4
  ret i32 %33
}

declare dso_local i32 @snprintf(i8*, i32, i8*, i8*, i64, i8*, i32) #1

declare dso_local i32 @vkprintf(i32, i8*) #1

declare dso_local i32 @write_basic_http_header(%struct.connection*, i32, i32, i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
